app/assets/stylesheets/home.css
/*ETSY NAV LOGIC*/
.etsy-nav {
  height: 70px;
  text-align: center;
}
.etsy-nav > form, a.etsy-nav  {
  padding-top: 20px;
}
.etsy-nav > a:hover {
  text-decoration: none;
}
input.search-query {
  width: 85%;
}
.etsy-search-bar {
  background-color: #e6e6e6;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
}
#etsy-logo {
  background-color: #EE3A8C;
  font-family: Georgia;
  font-size: 150%;
  color: white;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
  padding-top: 24px;
}
#account-text-section {
  text-align: right;
}

/*HOME STORE LOGIC*/
div.store-display {
  background-color: white;
}
div.featured-text-section {
  padding: 5px;
}

/* PRODUCT LOGIC */

div.product-display {
  background-color: white;
  display: relative;
}
div.product-favorite {
  display: none;
  color: pink;
}
.prod-section {
  padding-bottom: 10px;
}

.prod-price-section {
  text-align: right;
  color: #78c042;
}

/*FOOTER LOGIC*/
footer {
  text-align: center;
  padding: 30px;
}

